--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-	<h1>Ana Teresa Freire<h1>
+	<h1>Ana Teresa Costa Freire (菲安娜)<h1>
 	<p> Business Consultant</p>
-	<p> I can help to control and manager your business efficently<p>
+	<p>You are not rich until you have something that money can´t buy<p>
 	<a href="https://join.skype.com/invite/hIaBIwg76ecd" target="_blank"class="botao">Contact</a>
 <ul class="lista">
 	<li><a href="https://www.linkedin.com/in/atfreire1969/" target="_blank
